configs/pa.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: enable-mtls
  namespace: xendit-trial
spec:
  mtls:
    mode: STRICT
