configs/enable-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: enable-dr
  namespace: xendit-trial
spec:
  host: "*.xendit-trial.svc.cluster.local"
