configs/vs-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xendit-trial-v2
  namespace: xendit-trial
spec:
  hosts:
    - "xendit.node.aj.two"
  gateways:
    - xendit-trial/xendit-internal-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: xendit-node-app-2.xendit-trial.svc.cluster.local
