configs/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xendit-trial-v1
  namespace: xendit-trial
spec:
  hosts:
    - "xendit.node.aj.one"
  gateways:
    - xendit-trial/xendit-internal-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: xendit-node-app-1.xendit-trial.svc.cluster.local
